# udp-test

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cli.hpp  client.cpp  common.hpp  packet.hpp  server.cpp  uso_recv.hpp  uso_recv_win.cpp  uso_send.hpp  uso_send_win.cpp
cmake/: BoostDeps.cmake
linux/: README.md
linux/scripts/: build.sh  fetch-deps.sh  send_batches.py  test-exit.sh
scripts/: build-vs2019.bat  fetch-deps.ps1
